--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "reactflow": "^11.11.4",
+    "recharts": "^3.5.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
