--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.8",
+    "passport": "^0.7.0",
+    "bcryptjs": "^2.4.3",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
